package com.nextsolutions.sprintsphere_pro.testing

import com.nextsolutions.sprintsphere_pro.domain.utils.MetricAndImperialUnit

object SetupScreenTestTags {
    const val AgeTextField = "AgeTextField"
    const val MaleGender = "MaleGender"
    const val FemaleGender = "FemaleGender"
    const val OtherGender = "OtherGender"
    const val MetricAndImperialKgCm = "MetricAndImperialKgCm"
    const val MetricAndImperialLbsFt = "MetricAndImperialLbsFt"
    const val WeightTextField = "WeightTextField"
    const val HeightTextField = "HeightTextField"
    const val DoneButton = "DoneButton"
    const val GenderAndAge = "GenderAndAge"
    const val WeightAndHeight = "WeightAndHeight"
    const val XXXTextFieldLabel = "XXXTextFieldLabel"
}